[package]
name = "codeforces_rs"
version = "0.1.0"
authors = ["attila <linyiyu1992@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a617"
path = "src/a617.rs"


[[bin]]
name = "a236"
path = "src/a236.rs"

[[bin]]
name = "a281"
path = "src/a281.rs"

[[bin]]
name = "a719"
path = "src/a719.rs"


[[bin]]
name = "a110"
path = "src/a110.rs"


[[bin]]
name = "a41"
path = "src/a41.rs"

[[bin]]
name = "a1335"
path = "src/a1335.rs"

[[bin]]
name = "b266"
path = "src/b266.rs"