[package]
name = "codeforces_rs"
version = "0.1.0"
authors = ["attila <linyiyu1992@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a617"
path = "src/a617.rs"


[[bin]]
name = "a236"
path = "src/a236.rs"

[[bin]]
name = "a281"
path = "src/a281.rs"

[[bin]]
name = "a719"
path = "src/a719.rs"


[[bin]]
name = "a110"
path = "src/a110.rs"


[[bin]]
name = "a41"
path = "src/a41.rs"

[[bin]]
name = "a1335"
path = "src/a1335.rs"

[[bin]]
name = "b266"
path = "src/b266.rs"

[[bin]]
name = "a59"
path = "src/a59.rs"

[[bin]]
name = "a61"
path = "src/a61.rs"

[[bin]]
name = "a510"
path = "src/a510.rs"

[[bin]]
name = "b580"
path = "src/b580.rs"

[[bin]]
name = "a318"
path = "src/a318.rs"

[[bin]]
name = "a1166"
path = "src/a1166.rs"

[[bin]]
name = "c1452"
path = "src/c1452.rs"


[[bin]]
name = "a1452"
path = "src/a1452.rs"